# nibble8

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yaml
src/: main.rs
src/bit_utils/: mod.rs
src/display/: chip8_display.rs  mod.rs  sdl_display.rs  terminal_display.rs  virtual_display.rs
src/input/: mod.rs
src/machine/: chip8.rs  display_state.rs  instruction.rs  mod.rs  ram.rs  registers.rs  stack.rs
