[package]
name = "nibble8"
description = "Yet another Rust implementation of a Chip-8 interpreter, using sdl2."
version = "0.2.0"
edition = "2021"
authors = ["Daniel Hogers <daniel@hgrsd.nl>"]
repository = "https://github.com/hgrsd/nibble8/"
homepage = "https://github.com/hgrsd/nibble8/"
license = "MIT"
readme = "./README.md"
documentation = "https://github.com/hgrsd/nibble8/blob/master/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
sdl2 = "0.34.5"
